[gd_scene load_steps=2 format=2]

[ext_resource path="res://Audio Manager/Audio Manager.gd" type="Script" id=1]

[node name="Audio Manager" type="Node2D"]
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -10.0

[node name="SFX_Channel_1" type="AudioStreamPlayer" parent="."]

[node name="SFX_Channel_2" type="AudioStreamPlayer" parent="."]

[node name="En_Channel_1" type="AudioStreamPlayer" parent="."]

[node name="En_Channel_2" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]
